--- a/public/style/v1/assets/css/custom.css
+++ b/public/style/v1/assets/css/custom.css
@@ -2301,7 +2301,7 @@ position:absolute;
 	
 	.login-c1{	height:auto!important;	}
 	.login-c2{height:231px!important;}
-	.login-c3{ margin-top:281px!important; }
+	.login-c3{ margin-top:auto!important; }
 	.alignbottom{right:50px!important;}
 	.alignbottom2{left:50px!important;}
 	
@@ -2336,7 +2336,6 @@ width:94%;
 height:54px;
 background:#006699 url(../../images/login-blue.png) repeat-y left;
 z-index:10;
-margin-top:221px;
 margin-left:3%;
 position:absolute;
 }
